# wh-python

./: .gitignore  LICENSE  Makefile  PKG-INFO  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml
tests/: Makefile  api_fixture.py  conftest.py  pytest.ini  requirements_pydantic1.txt  requirements_pydantic2.txt  test_ha_api.py
weheat/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
weheat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
weheat/abstractions/: __init__.py  auth.py  discovery.py  heat_pump.py  user.py
weheat/api/: __init__.py  energy_log_api.py  heat_pump_api.py  heat_pump_log_api.py  user_api.py
weheat/models/: __init__.py  boiler_type.py  device_state.py  dhw_type.py  energy_view_dto.py  heat_pump_log_view_dto.py  heat_pump_model.py  heat_pump_status_enum.py  heat_pump_type.py  pagination_metadata.py  raw_heat_pump_log_dto.py  raw_heatpump_log_and_is_online_dto.py  read_all_heat_pump_dto.py  read_all_heat_pump_dto_paged_response.py  read_heat_pump_dto.py  read_user_dto.py  read_user_me_dto.py  role.py  total_energy_aggregate.py
weheat_backend_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
weheat_backend_client/abstractions/: __init__.py  auth.py  discovery.py  heat_pump.py
weheat_backend_client/api/: __init__.py  energy_log_api.py  heat_pump_api.py  heat_pump_log_api.py
weheat_backend_client/models/: __init__.py  device_state.py  energy_view_dto.py  heat_pump_log_view_dto.py  heat_pump_model.py  heat_pump_status_enum.py  heat_pump_type.py  raw_heat_pump_log_dto.py  read_all_heat_pump_dto.py  read_heat_pump_dto.py
