[tool.poetry]
name = "weheat"
version = "2025.2.26"
description = "Weheat Backend"
authors = ["Jesper Raemaekers <jesper.raemaekers@wefabricate.com>", "Kjell van Straaten <kjell.van.straaten@wefabricate.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wefabricate/wh-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Weheat Backend"]
include = ["weheat/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
aiohttp-retry = ">= 2.8.3"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = "deprecated, ignore-without-code, redundant-self, truthy-iterable"
disable_error_code = "annotation-unchecked, import-not-found, import-untyped"
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
exclude = [
  "weheat/api/*",
  "weheat/models/*",
  "weheat/*.py"
]

[[tool.mypy.overrides]]
module = [
  "weheat.api.*",
  "weheat.models.*",
  "weheat.*"
]
follow_imports = "skip"